--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,3 +45,23 @@ jobs:
       - name: build(babel->표준js, webpack->압축:프론트), jest(단위테스트) 등 계속 추가 가능
         working-directory:  ./
         run:  yarn run build
+
+      - name: 빌드한 소스코드, 리소스, 기타 설정파일 => 압축(zip)
+        run:  zip -r app.zip ./bin ./build ./public ./routes ./views ./app.js ./package.json ./.env
+
+      - name: AWS 접속
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
+          aws-region: ap-northeast-2
+
+      - name: 압축(zip)한 리소스 => s3 업로드
+        run:  aws s3 cp --region ap-northeast-2 ./app.zip s3://busan-deploy-bucket/deploy/
+
+      - name: AWS codeDeploy 서비스 절차에 따라 배포 시작
+        run:  aws deploy create-deployment
+          --application-name busan-code-deploy
+          --deployment-config-name CodeDeployDefault.OneAtATime
+          --deployment-group-name dev 
+          --s3-location bucket=busan-deploy-bucket,bundleType=zip,key=deploy/app.zip
